; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_get_response_line.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_get_response_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@report_buffer = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"error reading from fast-import\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"unexpected end of fast-import feedback\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_response_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_response_line() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* @buffer_read_line(i32* @report_buffer)
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i8*, i8** %2, align 8
  store i8* %7, i8** %1, align 8
  br label %15

8:                                                ; preds = %0
  %9 = call i64 @buffer_ferror(i32* @report_buffer)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = call i32 @die_errno(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %8
  %14 = call i32 @die(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %6
  %16 = load i8*, i8** %1, align 8
  ret i8* %16
}

declare dso_local i8* @buffer_read_line(i32*) #1

declare dso_local i64 @buffer_ferror(i32*) #1

declare dso_local i32 @die_errno(i8*) #1

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
